// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly return VirtualMachine with actions disabled 1`] = `
[
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit VirtualMachine",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete VirtualMachine",
  },
]
`;

exports[`Correctly return VirtualMachine with actions enabled 1`] = `
[
  {
    "click": [Function],
    "id": "startVM",
    "title": "Start VirtualMachine",
  },
  {
    "click": [Function],
    "id": "stopVM",
    "title": "Stop VirtualMachine",
  },
  {
    "click": [Function],
    "id": "restartVM",
    "title": "Restart VirtualMachine",
  },
  {
    "click": [Function],
    "id": "pauseVM",
    "title": "Pause VirtualMachine",
  },
  {
    "click": [Function],
    "id": "unpauseVM",
    "title": "Unpause VirtualMachine",
  },
  {
    "addSeparator": true,
    "click": [Function],
    "id": "edit",
    "title": "Edit VirtualMachine",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete VirtualMachine",
  },
]
`;

exports[`Correctly return empty row Actions for Application 1`] = `
[
  {
    "click": [Function],
    "id": "view-application",
    "title": "View Application",
  },
  {
    "click": [Function],
    "id": "view-application-topology",
    "title": "View Application topology",
  },
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit Application",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete Application",
  },
]
`;

exports[`Correctly return empty row Actions for restricted resource 1`] = `[]`;

exports[`Correctly return row Actions 1`] = `
[
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit Pod",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete Pod",
  },
]
`;

exports[`Correctly return row Actions for Application in global search 1`] = `
[
  {
    "click": [Function],
    "id": "view-application",
    "title": "View Application",
  },
  {
    "click": [Function],
    "id": "view-application-topology",
    "title": "View Application topology",
  },
  {
    "click": [Function],
    "id": "edit",
    "title": "Edit Application",
  },
  {
    "click": [Function],
    "id": "view-related",
    "title": "View related resources",
  },
  {
    "click": [Function],
    "id": "delete",
    "title": "Delete Application",
  },
]
`;
